<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.blackducksoftware.tools</groupId>
	<artifactId>cc-importer</artifactId>
	<version>1.4.6</version>
	<packaging>jar</packaging>

	<name>cc-importer</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<licenses>
    	<license>
        	<name>GNU General Public License v2.0 only</name>
        	<url>http://www.gnu.org/licenses/old-licenses/gpl-2.0-standalone.html</url>
    	</license>
	</licenses>
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.10</version>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>1.9.5</version>

		</dependency>
		<dependency>
			<groupId>com.github.stefanbirkner</groupId>
			<artifactId>system-rules</artifactId>
			<version>1.3.0</version>
		</dependency>

		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.14</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.7.7</version>
		</dependency>
		<dependency>
			<groupId>commons-cli</groupId>
			<artifactId>commons-cli</artifactId>
			<version>1.2</version>
		</dependency>

		<dependency>
			<groupId>com.blackducksoftware.tools</groupId>
			<artifactId>cf-7x-connector</artifactId>
      			<version>1.5.2</version>
		</dependency>

	</dependencies>

	<build>
		<sourceDirectory>src</sourceDirectory>
		<resources>
			<resource>
				<directory>src</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
		</resources>
		<plugins>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>2.4</version>
				<executions>
					<execution>
						<id>copy-libs</id>
						<phase>package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>
								${project.build.directory}/lib
							</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>appassembler-maven-plugin</artifactId>
				<version>1.3.1</version>

				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>assemble</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<platforms>
						<platform>windows</platform>
						<platform>unix</platform>
					</platforms>
					<binFileExtensions>
						<unix>.sh</unix>
					</binFileExtensions>

					<assembleDirectory>${project.build.directory}/deploy</assembleDirectory>
					<repositoryLayout>flat</repositoryLayout>
					<repositoryName>lib</repositoryName>
					<useWildcardClassPath>true</useWildcardClassPath>
					<programs>
						<program>
							<mainClass>com.blackducksoftware.tools.ccimport.CCIProjectImporterHarness</mainClass>
							<name>CCImporter</name>
						</program>
					</programs>
					<extraJvmArguments>-Xmx1024m -Xms1024M</extraJvmArguments>

					<configurationDirectory>./properties</configurationDirectory>
					<configurationSourceDirectory>${project.basedir}/src/main/resources</configurationSourceDirectory>
					<copyConfigurationDirectory>true</copyConfigurationDirectory>
					<includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
				</configuration>
			</plugin>
			<!-- Generate the zip -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>2.4</version>
				<executions>
					<execution>
						<!-- assemble executable package -->
						<id>assembly</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<descriptors>
								<descriptor>src/main/resources/cci_assembly.xml</descriptor>
							</descriptors>
							<descriptorRef>build-zip</descriptorRef>
							<appendAssemblyId>true</appendAssemblyId>
						</configuration>
					</execution>
					
					<execution>
						<!-- assemble development package -->
						<id>dev</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<descriptors>
								<descriptor>src/main/resources/dev_assembly.xml</descriptor>
							</descriptors>
							<descriptorRef>build-zip</descriptorRef>
							<appendAssemblyId>true</appendAssemblyId>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<archive>
						<manifest>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
							<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
						</manifest>
					</archive>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.15</version>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.surefire</groupId>
						<artifactId>surefire-junit47</artifactId>
						<version>2.12</version>
					</dependency>
				</dependencies>
				<configuration>
					<argLine>-XX:MaxPermSize=200m -Xms64m -Xmx256m</argLine>
					<includes>
						<include>**/*Test.class</include>
					</includes>

				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.10.3</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
						<configuration>
							<failOnError>false</failOnError>
        				</configuration>
					</execution>
				</executions>
				
				<configuration>
					<sourcepath>src/main/java</sourcepath>
        		</configuration>
			</plugin>
			
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>jcenter</id>
			<name>JCenter</name>
			<url>http://jcenter.bintray.com</url>
		</repository>
		<repository>
			<id>bds-bintray</id>
			<name>BDS Bintray</name>
			<url>http://dl.bintray.com/bds/tools</url>
		</repository>
	</repositories>
	
	<!-- Push artifact to internal BLack Duck repo for integration testing -->
	<distributionManagement>
		<repository>
			<id>artifactory.blackducksoftware.com</id>
			<name>artifactory.blackducksoftware.com-releases</name>
			<url>http://artifactory.blackducksoftware.com:8081/artifactory/soleng</url>
		</repository>
		<snapshotRepository>
			<id>artifactory.blackducksoftware.com</id>
			<name>artifactory.blackducksoftware.com-snapshots</name>
			<url>http://artifactory.blackducksoftware.com:8081/artifactory/soleng</url>
		</snapshotRepository>

	</distributionManagement>

</project>
